Closed Bug 700992 Opened 14 years ago Closed 14 years ago

Fix GCC compile warnings in XPConnect

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla11

People

(Reporter: n.nethercote, Assigned: n.nethercote)

References

(Blocks 1 open bug)

Details

(Whiteboard: [build_warning])

Attachments

(1 file, 1 obsolete file)

Attached patch patch (obsolete) — Splinter Review
Compiling XPConnect with GCC 4.6 gives 100s of warnings. This patch fixes all but one that's actually from xpcom/ds/nsCheapSets.h that I was reluctant to address. The nsDOMQS.h change fixed most of them.
Attachment #573157 - Flags: review?(bobbyholley+bmo)
Comment on attachment 573157 [details] [diff] [review] patch I don't think the explanatory comments are necessary - please kill them. r=bholley with that. I'm not actually an XPConnect peer though (yet). Flagging peterv for the rubber stamp.
Attachment #573157 - Flags: review?(peterv)
Attachment #573157 - Flags: review?(bobbyholley+bmo)
Attachment #573157 - Flags: review+
Yeah, randomly initializing stuff to shut up compilers is a fairly common pattern.
Blocks: buildwarning
OS: Linux → All
Hardware: x86_64 → All
Whiteboard: [build_warning]
Attached patch patch v2Splinter Review
New patch: - Fixes a couple more warnings that only occur in optimized builds. - Removes the comments, except the one in xpc_qsUnwrapThis(); I think it's unusual enough (the warnings happen only in functions that call it) to be worth keeping, though I'll remove if others disagree strongly.
Assignee: nobody → nnethercote
Attachment #573157 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #573157 - Flags: review?(peterv)
Attachment #573693 - Flags: review?(peterv)
peterv, can you please review this? It's a tiny patch and bholley thinks its fine.
Comment on attachment 573693 [details] [diff] [review] patch v2 Stealing.
Attachment #573693 - Flags: review?(peterv) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla11
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: