Bug 700992 - Fix GCC compile warnings in XPConnect.  r=bholley,gal.